Changing button names

--- a/templates/data_flow.html
+++ b/templates/data_flow.html
@@ -259,15 +259,15 @@
         <h2>Table Data</h2>
         <div class="section">
             <div class="section-header">View Specific Table Data</div>
-            <button type="button" class="create-tables-btn" onclick="loadTableData('Products')">Load Products Data</button>
+            <button type="button" class="create-tables-btn" onclick="loadTableData('Products')">View Products Data</button>
             <br>
-            <button type="button" class="create-tables-btn" onclick="loadTableData('Customers')">Load Customers Data</button>
+            <button type="button" class="create-tables-btn" onclick="loadTableData('Customers')">View Customers Data</button>
             <br>
-            <button type="button" class="create-tables-btn" onclick="loadTableData('Employees')">Load Employees Data</button>
+            <button type="button" class="create-tables-btn" onclick="loadTableData('Employees')">View Employees Data</button>
             <br>
-            <button type="button" class="create-tables-btn" onclick="loadTableData('Payments')">Load Payments Data</button>
+            <button type="button" class="create-tables-btn" onclick="loadTableData('Payments')">View Payments Data</button>
             <br>
-            <button type="button" class="create-tables-btn" onclick="loadTableData('Transactions')">Load Transactions Data</button>
+            <button type="button" class="create-tables-btn" onclick="loadTableData('Transactions')">View Transactions Data</button>
             <br>
             <div id="specificTableData">
                 <!-- Specific table data will be displayed here -->
