--- a/templates/index.html
+++ b/templates/index.html
@@ -197,9 +197,10 @@
     </header>
     <nav>
         <ul>
-            <li><a href="{{ url_for('index') }}">Files</a></li>
-            <li><a href="{{ url_for('tables') }}">Tables</a></li>
-            <li><a href="{{ url_for('data_flow') }}">Data Flow</a></li>
+            <li><a href="/">Files</a></li>
+            <li><a href="/tables">Tables</a></li>
+            <li><a href="/stored_procedures">Stored Procedures</a></li>
+            <li><a href="/data_flow">Data Flow</a></li>
         </ul>
     </nav>
     <div class="container">
