Adding DDLs for metric tables

--- a/templates/data_flow.html
+++ b/templates/data_flow.html
@@ -271,14 +271,14 @@
     <header>
         <h1>Sales Reporting System</h1>
     </header>
-    <nav>
+<nav>
         <ul>
             <li><a href="/">Files</a></li>
             <li><a href="/tables">Tables</a></li>
+            <li><a href="/stored_procedures">Stored Procedures</a></li>
             <li><a href="/data_flow">Data Flow</a></li>
-
         </ul>
-    </nav>
+</nav>
     <div class="container">
         <h2>Data Flow</h2>
         <div class="section">
