Changing code for table data

--- a/templates/stored_procedures.html
+++ b/templates/stored_procedures.html
@@ -162,7 +162,7 @@
             <li><a href="/">Files</a></li>
             <li><a href="/tables">Tables</a></li>
             <li><a href="/stored_procedures">Stored Procedures</a></li>
-            <li><a href="/data_flow">Data Flow</a></li>
+            <li><a href="/table_data">Table Data</a></li>
         </ul>
     </nav>
     <div class="container">
