Adding PowerBI visualizations page and supporting elements

--- a/templates/stored_procedures.html
+++ b/templates/stored_procedures.html
@@ -163,6 +163,7 @@
             <li><a href="/tables">Tables</a></li>
             <li><a href="/stored_procedures">Stored Procedures</a></li>
             <li><a href="/table_data">Table Data</a></li>
+            <li><a href="/visualizations">Visualizations</a></li>
         </ul>
     </nav>
     <div class="container">
