adding explore data

--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -18,6 +18,7 @@
             <li><a href="/stored_procedures">Stored Procedures</a></li>
             <li><a href="/table_data">Table Data</a></li>
             <li><a href="/visualizations">Visualizations</a></li>
+            <li><a href="/explore_data">Explore Data</a></li>
         </ul>
     </nav>
     <div class="container wide">
